--- a/index.html
+++ b/index.html
@@ -17,24 +17,25 @@
         <div class="top">
             <h1>weather app</h1>
             <div class="main-info">
-                <div>
-                    <h3 class="city-name"></h3>
-                    <input type="text" placeholder="Type a city name..."><button>GO</button>
-                    <p class="warning"></p>
-                </div>
                 <img src="./img/unknown.png" alt="weather-icon" class="photo">
+                <div>
+                    <input type="text" placeholder="Type a city name...">
+                    <button>GO</button>
+                </div>
+                <p class="warning"></p>
+                <h3 class="city-name"></h3>
             </div>
         </div>
         <div class="bottom">
             <div class="headings">
-                <p>Weather:</p>
                 <p>Temperature:</p>
                 <p>Humidity:</p>
+                <p>Weather:</p>
             </div>
             <div class="weather-info">
-                <p class="weather"></p>
                 <p class="temperature"></p>
                 <p class="humidity"></p>
+                <p class="weather"></p>
             </div>
         </div>
     </div> 
