--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="bottom">
             <div class="headings">
-                <p>Temperature:</p>
+                <p>Temp:</p>
                 <p>Humidity:</p>
                 <p>Weather:</p>
             </div>
